Page MenuHome GnuPG

Allow export and import of PQC secret keys.
Closed, ResolvedPublic

Description

Dongsheng Song reported at gnupg-users that exporting secret keys is not yet implemented.

# gpg --export-secret-keys --batch --passphrase="${PP}"
--pinentry-mode loopback ${fpr} > ${fpr}-k3.gpg
gpg: exporting a secret dual key is not yet supported

This should of course be done.

Event Timeline

werner triaged this task as Normal priority.Oct 1 2024, 6:12 PM
werner created this task.
werner created this object with edit policy "Contributor (Project)".
werner renamed this task from Allow exporting of PQC keys. to Allow export and import of PQC secret keys..Nov 14 2025, 3:56 PM
werner changed the task status from Open to Testing.Nov 16 2025, 6:50 PM
ebo claimed this task.
ebo moved this task from QA to Done on the gnupg26 board.
ebo added a subscriber: ebo.

Tested with Gpg4win-5.0.0-beta479

Ex- and import work, on the command line and in Kleopatra