gpg: Allow the export of Kyber secret keys.

* g10/export.c (match_curve_skey_pk): Allow the ECC part of a Kyber
key.
(secret_key_to_mode1003): Add arg is_part2.  Add code to allow a
second call to merge the Kyber part to the secret key s-exp.
(receive_seckey_from_agent): Add arg is_part2 and forward it.
(do_export_one_keyblock): Detect a dual key and handle it accordingly.
* g10/parse-packet.c (parse_key): In the secret key list code also
print the second s-expr of a dual key.
--

GnuPG-bug-id: 7315